# slides2html

./: .pre-commit-config.yaml  Pipfile  README.md  presentation2html.py  pyproject.toml  requirements.txt  setup.py
presentation2html/: downloader.py  generator.py  revealjstemplate.py  tool.py
scripts/: slides2html
slides2html/: downloader.py  generator.py  google_links_utils.py  image_utils.py  revealjstemplate.py  tool.py
themes/: basictheme.html  tfttheme.html
