[tool.poetry]
name = "slides2html"
version = "0.1.0"
description = ""
authors = ["xmonader <xmonader@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"
requests = "^2.31.0"
click = "^8.1.7"
httplib2 = "^0.22.0"
oauth2client = "^4.1.3"
google-api-python-client = "^2.110.0"
[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
slides2html = "slides2html.tool:cli"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
